# geostreamline

./: .env.example  .gitignore  GITHUB_SECRETS.md  README.md  cafe_restaurant_data_20250726_162016.json  dagster_pipeline.py  pyproject.toml  run_bq_load.py  run_conversion.py  run_dagster.py  run_dagster_simple.py
.github/workflows/: maps-pipeline.yml
.tmp_dagster_home_inco50o2/history/: runs.db
.tmp_dagster_home_inco50o2/history/runs/: index.db
.tmp_dagster_home_inco50o2/schedules/: schedules.db
.tmp_dagster_home_qo06sztr/history/: runs.db
.tmp_dagster_home_qo06sztr/history/runs/: index.db
.tmp_dagster_home_qo06sztr/schedules/: schedules.db
dashboard/: .env.example  app.css  evidence.config.yaml  package-lock.json  package.json
dashboard/pages/: +layout.svelte  index.md
dashboard/sources/dashboard_data/: avg_excellence_cafes.sql  avg_excellence_restaurants.sql  cafe_places.sql  cafe_rankings.sql  city_comparison.sql  city_performance.sql  connection.yaml  dashboard_data.duckdb  dashboard_data.sql  dashboard_metrics.csv  dashboard_metrics.parquet  dashboard_metrics.sql  data_freshness.sql  detailed_metrics.sql  kpi_metrics.sql  last_updated.sql  quality_share_analysis.sql  restaurant_places.sql  restaurant_rankings.sql  venue_scale_comparison.sql
dashboard/sources/maps_data/: connection.yaml  maps_daily_summary.sql  maps_location_analysis.sql
gcs_to_bq/: gcs_handler.py  json_to_parquet.py
ingestion/: __init__.py  maps_api_ingestion.py  place_ids.json
transform/maps_metrics/: .user.yml  dbt_project.yml  profiles.yml
(+6 files in other folders)
